applications/services/tangled/spindle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spindle
  namespace: tangled
  labels:
    app.kubernetes.io/name: tangled-spindle
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tangled-spindle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tangled-spindle
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: spindle
          image: docker.io/heywoodlh/spindle@sha256:7f2dd3200885a799abbf2c8480ec546d24d48cf75c102d8b929e3b0f8c75b9f7
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 6555
          volumeMounts:
            - name: data
              mountPath: /data
            - name: logs
              mountPath: /var/log/spindle
          startupProbe:
            tcpSocket:
              port: 6555
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 6555
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6555
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spindle-data
        - name: logs
          emptyDir: {}
