applications/services/tangled/spindle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spindle
  namespace: tangled
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tangled-spindle
  ports:
    - name: http
      port: 6555
      targetPort: 6555
